# function2

./: .gitignore  .travis.yml  Benchmark.cpp  CMakeLists.txt  Findfunction2.cmake  Incubator.cpp  Mockup.cpp  Readme.md  Test.cpp  _config.yml  appveyor.yml  function.hpp  index.html  index.md  params.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
cmake/: CMakeLists.txt  configure_compiler.cmake  configure_macros.cmake  configure_platform.cmake
cmake/compiler/: clang.cmake  gcc.cmake  msvc.cmake
cmake/macros/: enable_cxx11_or_14.cmake
include/function2/: function2.hpp
test/: CMakeLists.txt  assign-and-constructible-test.cpp  build-test.cpp  empty-function-call-test.cpp  function2-test.hpp  functionality-test.cpp  multi-signature-test.cpp  noexcept-test.cpp  overload-test.cpp  partial-apply-test.cpp  partial-apply.cpp  playground.cpp  regressions.cpp  self-containing-test.cpp  standard-compliant-test.cpp  type-test.cpp  view-test.cpp
test/dist-package/: CMakeLists.txt  main.cpp
test/dist-subproject/: CMakeLists.txt
testing/: Benchmark.cpp  SelfContaining.cpp  Test.cpp
tools/: travis-ci.sh
